Update rooter
